@@ -34,6 +34,8 @@ Optimizations
 
 Other Changes
 ----------------------
+* SOLR-7516: Improve javadocs for JavaBinCodec, ObjectResolver and enforce the single-usage policy.
+  (Jason Gerlowski, Benoit Vanalderweireldt, shalin)
 
 ==================  6.0.0 ==================
 
